Native/Test/KL/empty-return-withing-function-returning-value.out
empty-return-withing-function-returning-value.kl:7:3: error: function must return a value
empty-return-withing-function-returning-value.kl:5:1: error: not all paths return a value
